inserting a config-field 'description' to a resource allows to enter custom descriptions for 'general', 'method', and 'fields' in dict-structure

--- a/eve_docs/templates/evedocstyle.html
+++ b/eve_docs/templates/evedocstyle.html
@@ -46,6 +46,11 @@
   margin-right: 10px;
 }
 
+.method_description {
+  margin: 8px;
+  font-style: italic;
+}
+
 .method.GET {
   background-color: rgba(51, 102, 255, 0.1);
   border-color: rgba(51, 102, 255, 0.3);
@@ -80,5 +85,9 @@
 
 .method_verb.DELETE {
   background-color: rgba(178, 34, 34, 1);
+}
+
+.param-description {
+  font-style: italic;
 }
 </style>
