displays now description fields with new style

--- a/eve_docs/templates/evedocstyle.html
+++ b/eve_docs/templates/evedocstyle.html
@@ -4,6 +4,11 @@
   font-size: 20px;
 }
 
+.panel_description {
+  margin-bottom: 7px;
+  font-weight: bold;
+}
+
 .method {
   border-style: solid;
   border-width: 1px;
@@ -47,7 +52,8 @@
 }
 
 .method_description {
-  margin: 8px;
+  padding: 3px;
+  margin: 7px;
   font-style: italic;
 }
 
